# src/routes/developer.routes.js
@@ -2,10 +2,12 @@ import express from "express";
 import {
   addDeveloper,
   deleteDeveloper,
+  developerDocument,
   getDeveloperList,
   updateDeveloperPatch,
   updateDeveloperPut,
 } from "../controller/developerController.js";
+import { upload } from "../middleware/upload.js";
 const route = express.Router();
 
 route.post("/", addDeveloper);
@@ -15,5 +17,8 @@ route.get("/developerList", getDeveloperList);
 route.put("/:id", updateDeveloperPut);
 route.patch("/:id", updateDeveloperPatch);
 route.delete("/", deleteDeveloper);
+
+//Doc
+route.post("/Doc", upload.single("file"), developerDocument);
 
 export const developerRoute = route;
